<resources>
    <string name="app_name">Пента.Почта</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Spam">Спам</string>
    <string name="Sent">Отправленные</string>
    <string name="Watched">Прочитанные</string>
    <string name="Write">Написать</string>
    <string name="NewFolder">Добавить папку</string>
    <string name="NewMessagesShort">Новые</string>
    <string name="Exit">Выйти</string>
    <string name="NewMessagesLong">Новые сообщения</string>
    <string name="MailName">\@penta.ru</string>
    <string name="sendDateString">Отправлено:</string>
    <string name="delete_button_description">delete button</string>
    <string name="enter_error">Ошибка входа</string>
    <string name="choose_folder">Выберите папку</string>
</resources>
